objects/Customer_Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Account Plans</relationshipLabel>
        <relationshipName>Customer_Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Chemical_Spend__c</fullName>
        <formula>Account__r.Annual_Chemical_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all CPPs = &quot;Estimated Sales Value&quot;</inlineHelpText>
        <label>Annual Chemical Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Articulate_differences_current_vs_new__c</fullName>
        <description>Emerging need potential + 10</description>
        <inlineHelpText>Stakeholder(s) articulate the differences between current state and a new insight learned</inlineHelpText>
        <label>Articulate differences current vs new</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_supplier_falls_short__c</fullName>
        <description>Discontent with status quo</description>
        <label>Current supplier falls short</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dissatisfaction_with_existing_solutions__c</fullName>
        <description>Discontent with status quo + 4</description>
        <label>Dissatisfaction with existing solutions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_the_customer_have_solutions__c</fullName>
        <label>Does the customer have solutions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engages_in_constructive_dialogue__c</fullName>
        <description>Emerging need potential +10</description>
        <inlineHelpText>Stakeholders(s) engage in a constructive dialogue when initial assumptions are challenged</inlineHelpText>
        <label>Engages in constructive dialogue</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Express_openness_to_escalation__c</fullName>
        <description>Emerging need potential + 10</description>
        <inlineHelpText>Stakeholder(s) express openness to escalating the problem to an organizational-level</inlineHelpText>
        <label>Express openness to escalation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_pressures_to_change__c</fullName>
        <description>Current Operating Environment +3</description>
        <inlineHelpText>New industry regulations, loss of market position</inlineHelpText>
        <label>External pressures to change</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financially_healthy_organization__c</fullName>
        <description>Opportunity Fundamentals +2</description>
        <label>Financially healthy organization</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequent_sharing_of_best_practices__c</fullName>
        <description>Receptivity to new or disruptive ideas + 6</description>
        <label>Frequent sharing of best practices</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_organizational_needs_unmet__c</fullName>
        <description>Discontent with status quo +4</description>
        <label>General organizational needs unmet</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_might_this_impact_the_customer__c</fullName>
        <inlineHelpText>what KPIs may be impacted?</inlineHelpText>
        <label>How might this impact the customer?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Improvement_initiatives_as_ongoing__c</fullName>
        <description>Receptivity to new or disruptive ideas +6</description>
        <inlineHelpText>Initiatives are treated as ongoing (not discrete) events</inlineHelpText>
        <label>Improvement initiatives as ongoing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_pressures_to_change__c</fullName>
        <description>Current Operating Enrironment +3</description>
        <inlineHelpText>Change in top management, change in strategic direction</inlineHelpText>
        <label>Internal pressures to change</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsClone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Cloned?</description>
        <label>IsClone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_competition_entrenched__c</fullName>
        <label>Is the competition entrenched?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_customer_aware_of_these_changes__c</fullName>
        <label>Is the customer aware of these changes?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Reviewed__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:LastActivityDate}</formula>
        <label>Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_of_Partnership__c</fullName>
        <label>Level of Partnership</label>
        <picklist>
            <picklistValues>
                <fullName>Low - Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High - 2 - Way Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Competitor__c</fullName>
        <label>Main Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barton Solvents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bell Chem Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callahan Chemical Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cascade Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals Inc., USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemsolv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonial Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cone Solvents Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coyne Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC Ind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMCO Chemical Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET Horn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FBC Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS Robins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harcros Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawkins Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrate Chemical Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideal Chemical &amp; Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Chemicals Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interstate Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM Swank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mays Chemical Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monson Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexeo Solutions</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Review__c</fullName>
        <label>Manager Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobilizers_exist__c</fullName>
        <description>Emerging need potential + 10</description>
        <inlineHelpText>Known mobilizer(s) exist and have been confirmed</inlineHelpText>
        <label>Mobilizers exist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multiple_stakeholders_learning__c</fullName>
        <description>Receptivity to new or disruptive ideas</description>
        <inlineHelpText>Attendance at conferences and learning events</inlineHelpText>
        <label>Multiple stakeholders at learning events</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Readiness_Score__c</fullName>
        <description>Formula based on Section 3: Opportunity Qualification Scorecard answers.</description>
        <formula>0+ CASE(Significant_current_or_potential_spend__c, &quot;Yes&quot;, +2, &quot;No&quot;, -2, &quot;Unknown&quot;, +0, 0) +
CASE(Financially_healthy_organization__c, &quot;Yes&quot;, +2, &quot;No&quot;, -2, &quot;Unknown&quot;, +0, 0) +
CASE(External_pressures_to_change__c, &quot;Yes&quot;, +3, &quot;No&quot;, -3, &quot;Unknown&quot;, +0, 0) +
CASE(Internal_pressures_to_change__c, &quot;Yes&quot;, +3, &quot;No&quot;, -3, &quot;Unknown&quot;, +0, 0) +
CASE(Organization_wide_discontent__c, &quot;Yes&quot;, +4, &quot;No&quot;, -4, &quot;Unknown&quot;, +0, 0) +
CASE(Current_supplier_falls_short__c, &quot;Yes&quot;, +4, &quot;No&quot;, -4, &quot;Unknown&quot;, +0, 0) +
CASE(Dissatisfaction_with_existing_solutions__c, &quot;Yes&quot;, +4, &quot;No&quot;, -4, &quot;Unknown&quot;, +0, 0) +
CASE(General_organizational_needs_unmet__c, &quot;Yes&quot;, +4, &quot;No&quot;, -4, &quot;Unknown&quot;, +0, 0) +
CASE(Frequent_sharing_of_best_practices__c, &quot;Yes&quot;, +6, &quot;No&quot;, -6, &quot;Unknown&quot;, +0, 0) +
CASE(Multiple_stakeholders_learning__c, &quot;Yes&quot;, +6, &quot;No&quot;, -6, &quot;Unknown&quot;, +0, 0) +
CASE(Senior_leaders_reach_out_for_ideas__c, &quot;Yes&quot;, +6, &quot;No&quot;, -6, &quot;Unknown&quot;, +0, 0) +
CASE(Improvement_initiatives_as_ongoing__c, &quot;Yes&quot;, +6, &quot;No&quot;, -6, &quot;Unknown&quot;, +0, 0) +
CASE(Engages_in_constructive_dialogue__c, &quot;Yes&quot;, +10, &quot;No&quot;, -10, &quot;Unknown&quot;, +0, 0) +
CASE(Articulate_differences_current_vs_new__c, &quot;Yes&quot;, +10, &quot;No&quot;, -10, &quot;Unknown&quot;, +0, 0) +
CASE(Request_continuing_conversations__c, &quot;Yes&quot;, +10, &quot;No&quot;, -10, &quot;Unknown&quot;, +0, 0) +
CASE(Express_openness_to_escalation__c, &quot;Yes&quot;, +10, &quot;No&quot;, -10, &quot;Unknown&quot;, +0, 0) +
CASE(Mobilizers_exist__c, &quot;Yes&quot;, +10, &quot;No&quot;, -10, &quot;Unknown&quot;, +0, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is calculated based on Section 3: Opportunity Qualification Scorecard&apos;s values.</inlineHelpText>
        <label>Net Readiness Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_wide_discontent__c</fullName>
        <description>Discontent with status quo + 4</description>
        <inlineHelpText>Discontent with status quo</inlineHelpText>
        <label>Organization-wide discontent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Account__r.OwnerLink__r.FirstName + &quot; &quot; +  Account__r.OwnerLink__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perceived_Univar_Strengths__c</fullName>
        <label>Perceived Univar Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Perceived_Univar_Weaknesses__c</fullName>
        <label>Perceived Univar Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_continuing_conversations__c</fullName>
        <description>Emerging need potential</description>
        <inlineHelpText>Stakeholder(s) request to continue conversations on industry trends and benchmarks</inlineHelpText>
        <label>Request continuing conversations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the SFDC User record corresponding to the Sales Manager from UVX.  Populated by Apex trigger which looks up the User by alias, using the Sales Mgr Id from UVX.</description>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMName__c</fullName>
        <description>Text version of the SFDC Sales Manager&apos;s name.  Used in case there is no valid SFDC user record with alias matching the SM Id from the UVX - in this case we just use the SM Name from the UVX.</description>
        <label>Sales Manager</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Id__c</fullName>
        <description>4-character ID from UVX - from the LEAD column on DCS Code Category 135.</description>
        <formula>Account__r.SalesMgrID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager Id (UVX)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <formula>Account__r.SalesMgrName__c</formula>
        <inlineHelpText>Sales Manager from the UVX.</inlineHelpText>
        <label>Sales Manager (UVX)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>TEXT(Account__r.ProfitabilitySegment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_leaders_reach_out_for_ideas__c</fullName>
        <description>Receptivity to new or disruptive ideas</description>
        <label>Senior leaders reach out for ideas</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <description>TTM Sales divided by Annual Chemical Spend</description>
        <formula>IF(AND(Account__r.AcornRolling12MoSales__c &gt; 0,
Account__r.Annual_Chemical_Spend__c &gt; 0), 
ROUND((Account__r.AcornRolling12MoSales__c /  Account__r.Annual_Chemical_Spend__c) ,2),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Significant_current_or_potential_spend__c</fullName>
        <description>Opportunity Fundamentals +2</description>
        <label>Significant current or potential spend</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TTM_Closed_Won_Closed_Lost_Ratio__c</fullName>
        <formula>IF(AND(Account__r.TTM_Closed_Lost__c &gt;0, Account__r.TTM_Closed_Won_Opportunities__c &gt; 0),
ROUND((Account__r.TTM_Closed_Lost__c / Account__r.TTM_Closed_Won_Opportunities__c)  ,2),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolling 12 Month - Closed Lost Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TTM_Closed_Won_Opportunities__c</fullName>
        <formula>ROUND(Account__r.TTM_Closed_Won_Opportunities__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolling 12 Month Closed/Won Opptys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TTM_Sales__c</fullName>
        <description>Twelve Month Rolling Sales</description>
        <formula>Account__r.AcornRolling12MoSales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Twelve Month Rolling Sales</inlineHelpText>
        <label>Rolling 12 Month Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Open_Opportunities__c</fullName>
        <formula>Account__r.Total_Open_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Open Opptys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_Are_the_3_Biggest_Unknowns__c</fullName>
        <label>What Are the 3 Biggest Unknowns?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_can_I_use_Manager_Input_On__c</fullName>
        <label>What can I use Manager Input On?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_changes_are_happening__c</fullName>
        <inlineHelpText>What changes are happening or forecasted in the industry/marketplace?</inlineHelpText>
        <label>What changes are happening</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>setReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Show/Hide edit button on older cloned versions of the cap in the Visual Force page.</description>
        <label>setReadOnly</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>